--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
